Fix input padding alignment (#5389)
* Fix input padding alignment

* Let search box inherit input colors

* Move input spacing variables to spacing settings

--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -34,12 +34,7 @@
       @extend %transparent-button;
     }
 
-    // Theme set on body element
     .p-search-box__input {
-      background-color: $colors--theme--background-inputs;
-      border-color: $colors--theme--border-high-contrast;
-
-      color: $colors--theme--text-default;
       flex: 1 1 100%;
       margin-bottom: 0;
       padding-right: calc(2 * (2 * $spv-nudge + map-get($line-heights, default-text)));
